<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:transitionName="transition_pantalla_reservar"
    android:background="?android:colorBackground">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context="com.barapp.ui.pantallas.PantallaCrearReserva">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/boton_atras_descripcion"
            app:navigationIcon="@drawable/icon_outlined_arrow_back_24"
            app:navigationIconTint="?attr/colorOnSurface"
            style="@style/Widget.Barapp.Toolbar">

            <TextView
                android:id="@+id/labelNombreRestaurante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:layout_marginStart="10dp"
                android:text="@string/pantalla_reservar_titulo_nombre_restaurante"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
                android:textSize="20sp"
                android:textStyle="bold" />

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldTamanioGrupo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="15dp"
                android:hint="@string/pantalla_reservar_titulo_tamanio_grupo"
                app:startIconDrawable="@drawable/icon_filled_person_24"
                android:minHeight="80dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputTamanioGrupo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:minHeight="64dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/botonQuitarPersona"
                    android:layout_width="47dp"
                    android:layout_height="47dp"
                    android:layout_marginHorizontal="3dp"
                    android:textAlignment="center"
                    android:contentDescription="@string/boton_quitar_persona_descripcion"
                    app:icon="@drawable/icon_filled_remove_24"
                    style="?attr/materialIconButtonOutlinedStyle"
                    android:layout_gravity="center|end" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/botonAgregarPersona"
                    android:layout_width="47dp"
                    android:layout_height="47dp"
                    android:layout_gravity="center|end"
                    android:layout_marginHorizontal="5dp"
                    android:textAlignment="center"
                    android:contentDescription="@string/boton_agregar_persona_descripcion"
                    app:icon="@drawable/icon_outlined_add_24"
                    style="?attr/materialIconButtonOutlinedStyle" />
            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldFechaReserva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pantalla_reservar_titulo_fecha_de_reserva"
            app:startIconContentDescription="@string/imagen_calendario_descripcion"
            app:startIconDrawable="@drawable/icon_outlined_insert_invitation_24"
            android:minHeight="80dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputFechaReserva"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:clickable="true"
                android:maxLines="1"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/labelHorariosDisponibles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp"
            android:text="@string/pantalla_reservar_titulo_horarios_disponibles"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/labelSeleccionarFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text= "@string/pantalla_reservar_texto_ayuda_horarios_deshabilitados"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:textSize="15sp"
            android:textStyle="italic" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:chipSpacingHorizontal="10dp"
            app:singleSelection="true"/>

        <Button
            android:id="@+id/botonCrearReserva"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:text="@string/boton_crear_reserva"
            android:contentDescription="@string/boton_crear_reserva_descripcion"
            app:icon="@drawable/icon_filled_done_24"
            style="@style/Widget.Material3.Button.Icon"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>