...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelDestacados"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/pantalla_principal_restaurantes_destacados"
                android:textAppearance="@style/BarApp.TextAppearanceTitleMain" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewHorizontalRestaurantesDestacados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:transitionGroup="true"
                android:layout_marginBottom="15dp" >

...
